--- a/lang/en.json
+++ b/lang/en.json
@@ -100,6 +100,9 @@
 
     "levels.err.lessfog": "Levels: WARNING! Less Fog detected - token visibility will not work as expected, please disable either module",
     "levels.err.tokenheight": "Levels: WARNING! Detected 'Enable Token Height' option enabled in module Wall Height - this setting is incompatible with Levels and has been disabled!",
-    "levels.firsttime.dialog": ""
+    "levels.firsttime.dialog": "",
+
+
+    "levels.conflicts.midiqol.tokenvis": "Enabling the 'Players control owned hidden tokens' option in MidiQOL will cause token visibility issues. Please disable this option in the module settings."
 
 }
