--- a/lang/en.json
+++ b/lang/en.json
@@ -33,12 +33,17 @@
     "levels.settings.revealTokenInFog.hint": "If a token is visible, reveal the fog of war around that token",
 
 
+    "levels.tilecoonfig.noOverhead": "This is NOT an overhead tile, this tile will be ignored by levels and rendered at the bottom of the stack.",
     "levels.tilecoonfig.rangeTop.name": "Height (Top)",
     "levels.tilecoonfig.rangeBottom.name": "Height (Bottom)",
     "levels.tilecoonfig.showIfAbove.name": "Show even when below?",
+    "levels.tilecoonfig.showIfAbove.hint": "If enabled, the tile will be shown even if the token is below the bottom height range (example use, balconies)",
     "levels.tilecoonfig.showAboveRange.name":"Max Elevation Difference",
+    "levels.tilecoonfig.showAboveRange.hint": "When 'Show even when below?' is enabled, this is the maximum elevation difference between the token and the tile, past this value the tile will no longer show.",
     "levels.tilecoonfig.isBasement.name":"is Basement?",
+    "levels.tilecoonfig.isBasement.hint": "If enabled, the tile will only be shown if the token is inside the tile range, this means that a token above the top range will not see this tile.",
     "levels.tilecoonfig.noFogHide.name":"Don't hide this tile in the Fog",
+    "levels.tilecoonfig.noFogHide.hint": "Exclude this tile from Level's 'Advanced Fog of War'.",
     "levels.tilecoonfig.range.unit": "Elevation",
     "levels.drawingconfig.hb.name": "Height (Bottom)",
     "levels.drawingconfig.ht.name": "Height (Top)",
