--- a/lang/en.json
+++ b/lang/en.json
@@ -71,6 +71,8 @@
     "levels.sceneconfig.backgroundElevation.notes": "An elevation in distance units which configures the height of the background image and underfoot tiles.",
     "levels.sceneconfig.weatherElevation.name": "Weather Elevation",
     "levels.sceneconfig.weatherElevation.notes": "An elevation in distance units which configures the height of the weather effects.",
+    "levels.sceneconfig.lightMasking.name": "Light Masking",
+    "levels.sceneconfig.lightMasking.notes": "Show lights below current elevation and mask them using tiles. This feature as limitations, please check the Levels module page for more information.",
 
     "levels.controls.main.name": "Levels",
     "levels.controls.levelsview.name": "Enable Levels View/Placement",
