--- a/lang/de.json
+++ b/lang/de.json
@@ -26,7 +26,7 @@
     "levels.tilecoonfig.rangeTop.name": "Höhe (oben)",
     "levels.tilecoonfig.rangeBottom.name": "Höhe (Unten)",
     "levels.tilecoonfig.showIfAbove.name": "Auch anzeigen, wenn unten?",
-    "levels.tilecoonfig.showAboveRange.name": "Max Elevation Difference", "levels.tilecoonfig.showAboveRange.name": "Maximale Höhendifferenz",
+    "levels.tilecoonfig.showAboveRange.name": "Maximale Höhendifferenz",
     "levels.tilecoonfig.isBasement.name": "Ist Fundament?",
     "levels.tilecoonfig.noFogHide.name": "Diese Kachel im Nebel nicht ausblenden",
     "levels.tilecoonfig.range.unit": "Aufzug",
